syntax = "proto3";

package phil0522.taskd;

message ShellSnippetRequest {
  string current_directory = 1;

  // The current input.
  string cmd_prefix = 2;
}

message ShellSnippetResponse {
  repeated ShellSnippet shell_snippets = 1;
}

message ShellSnippet {
  string snippet_name = 1;
  string snippet_description = 2;
  string snippet_command = 3;
}

message QuitServerRequest {}

message QuitServerResponse {}
service SnippetService {
  rpc SearchShellSnippet(ShellSnippetRequest) returns (ShellSnippetResponse) {}

  rpc QuitServer(QuitServerRequest) returns (QuitServerResponse) {}
}